# dartwic-labjack-plugin

./: .gitignore  CMakeLists.txt  README.md  build-configuration.default.json  build-configuration.json  build.mjs  package-lock.json  package.json  plugin.json
engine/include/: labjack_t7_controller.h  labjack_t7_module.h  labjack_t7_plugin.h
engine/include/sdk/: sdk_api.h
engine/include/sdk/modules/: BaseModule.h
engine/include/sdk/plugins/: BasePlugin.h
engine/libs/LabJack/Drivers/: LabJackM.h
engine/libs/LabJack/Drivers/64bit/: LabJackM.lib
engine/src/: default_parameters.json  labjack_t7_controller.cpp  labjack_t7_module.cpp  labjack_t7_plugin.cpp
interface/src/: index.jsx  runtime-entry.jsx
plugin/engine/labjack_t7/: default_parameters.json  module_config.json  plugin.json
plugin/interface/labjack_t7/ui/: index.js
